--- a/latihan5.css
+++ b/latihan5.css
@@ -13,12 +13,12 @@ body {
 /* buat isi */
 h1 {
     background-color: rgb(108, 255, 147);
-    color: rgb(25, 4, 130));
+    color: rgb(25, 4, 130);
     text-align: center;
 }
 h2 {
     background-color: rgb(129, 205, 255);
-    color: rgb(248, 117, 170));
+    color: rgb(248, 117, 170);
     text-align: center;
 }
 p{
