--- a/latihan5.css
+++ b/latihan5.css
@@ -9,6 +9,7 @@ body {
     margin: 20px;
     background-color: rgb(251, 255, 149);
     border: 8px dotted rgb(255, 95, 27);
+    text-align: center;
 }
 /* buat isi */
 h1 {
@@ -18,7 +19,7 @@ h1 {
 }
 h2 {
     background-color: rgb(129, 205, 255);
-    color: rgb(248, 117, 170);
+    color: rgb(25, 4, 130);
     text-align: center;
 }
 p{
