--- a/latihan5.css
+++ b/latihan5.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url(https://www.wowkeren.com/display/images/photo/2020/11/25/00340997.jpg);
+    background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20230325/pngtree-summer-cartoon-beach-landscape-background-image_2095055.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     background-attachment: fixed;
